--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,17 +6,21 @@
     <meta name="description" content="Poster Voting Platform">
     <meta name="author" content="Steven Kingaby">
 
-    <!-- angular script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="js/app.js"></script>
-
     <!-- jQuery and Materialize -->
+    <!-- Note that jquery must be linked before angular.min.js so that angularJS to uses jQuery instead of jQlite. Otherwise date picker will not work -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/assets/stylesheets/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="/assets/stylesheets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <script src="/js/materialize.js"></script>
+
+    
+    <!-- angular script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/ng-pickadate/ng-pickadate.js"></script>
+    <script src="js/app.js"></script>
+
 
     <!-- app js -->
     <script src="js/routes.js"></script>
